// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FancyDiv matches snapshot 1`] = `[]`;

exports[`FancyDiv matches snapshot as children 1`] = `
<ForwardRefFancyDivInner
  ref={
    {
      "current": null,
    }
  }
/>
`;

exports[`FancyDivArrow matches snapshot 1`] = `[]`;

exports[`FancyDivArrow matches snapshot as children 1`] = `
<ForwardRef
  ref={
    {
      "current": null,
    }
  }
/>
`;

exports[`FancyDivNamed matches snapshot 1`] = `[]`;

exports[`FancyDivNamed matches snapshot as children 1`] = `
<FancyDivDisplayName
  ref={
    {
      "current": null,
    }
  }
/>
`;

exports[`TestRef matches snapshot 1`] = `[]`;

exports[`TestRef matches snapshot as children 1`] = `<TestRef />`;
